# ChangeLog for dev-perl/EV
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/EV/ChangeLog,v 1.6 2012/04/21 19:30:08 tove Exp $

  21 Apr 2012; Torsten Veller <tove@gentoo.org> -EV-4.30.0.ebuild:
  Cleanup

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

*EV-4.100.0 (24 Jan 2012)

  24 Jan 2012; Torsten Veller <tove@gentoo.org> +EV-4.100.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -EV-4.03.ebuild:
  Cleanup

*EV-4.30.0 (31 Aug 2011)

  31 Aug 2011; Torsten Veller <tove@gentoo.org> +EV-4.30.0.ebuild:
  Change version scheme

*EV-4.03 (15 Aug 2011)

  15 Aug 2011; Patrick Lauer <patrick@gentoo.org> +EV-4.03.ebuild,
  +metadata.xml:
  Initial import from Rion overlay, ebuilds by the respective authors
