@@ -5,16 +5,18 @@ DIST Bio-Graphics-2.24.tar.gz 860229 RMD160 58e826d56acfcc9317883383b36b5b263985
 DIST Bio-Graphics-2.25.tar.gz 861909 RMD160 0581ce114f57086854da4979c2c92ad63a3caa7a SHA1 9e64e4988a937a7da7f51e0c6586f6aa926099ad SHA256 1a189bb5d24672f6ee09d977d44fcb9506f882001b886825839e4a0fd3af559b
 DIST Bio-Graphics-2.26.tar.gz 967246 RMD160 2b2a863c919e74bf2caa8941a333fa2a4dc7ce88 SHA1 2871620d581a4d5fd07fde591840dabc454e1d8e SHA256 2bc1b7e58e893a977313364c70553a0e63f8bf59af8b966438a88340e1ed323a
 DIST Bio-Graphics-2.28.tar.gz 971391 RMD160 036e84a97be434e72ec8a502e4d7fdea1a73a36b SHA1 91ac98571f6a50dfde675664a86590925cc654c4 SHA256 ffbab6dc31934f1567770c3354d67c9f6214097de9a438d19e78040336600fc3
+DIST Bio-Graphics-2.29.tar.gz 972569 RMD160 827f58ab70a01ca8dd45c1d7f35b8c5a69610153 SHA1 2bc0efd4b784d51bf0dca4633691f842860148e8 SHA256 e127c8471b60ef7bd929917e5f078e1685deeb6713838888c2cf06fafd769152
 EBUILD Bio-Graphics-2.240.0.ebuild 533 RMD160 72421dbe105fab9110cb6822dd4601365172965e SHA1 c137f5ec80b0b90a887743ea924ebb890929ac34 SHA256 272aa9bbeeda47c108f34e0628b8ba49fafece3ae30a1341ad243301c4ecf03d
 EBUILD Bio-Graphics-2.250.0.ebuild 533 RMD160 922279b5d93f15a63573c3242eef0885a1446127 SHA1 472ef189e791ca1bfa909d8b511a7fe8e131fc47 SHA256 b4735cd6deb919aca887237677dc9ca8490282e6c632fbd1d6151ef9d6a85b60
 EBUILD Bio-Graphics-2.260.0.ebuild 536 RMD160 08ce53c943e59ab914b74ed2facd910308da3bfa SHA1 1ba28fba4e589155734c7180c6b3401deb189455 SHA256 6413c3a5d1aa814f8dd6272fd82d029ec246e657f14cd8c22bad8eeef080f090
 EBUILD Bio-Graphics-2.280.0.ebuild 533 RMD160 6781eae041d4afc0d8e255d97a4382e239459eae SHA1 93dd943c4b9ff614b8d1925632c6063496c35569 SHA256 4579c9aa9b9a2305dceb959b84c66a5df3877f2427ade312f5a6ed59a9f7e83b
-MISC ChangeLog 5128 RMD160 9e368c840fc75a0e19b94b52dfe94a6fc4d0a940 SHA1 bca8257312b24794ff29b07e2c22f7e709d99fae SHA256 212a7d08d891b421227898a9d557626afd6663019bd2c4fbbf496bbd8fad5a9c
+EBUILD Bio-Graphics-2.290.0.ebuild 533 RMD160 d22d79965937020e5785370544e009b2dc749a0d SHA1 be2365a65b8a54693c69dae1e497ed33893857e7 SHA256 e514a4f3bf6d1a0cc176c13727f94566f0df59db9cdcf6840bf3554401d13f0a
+MISC ChangeLog 5259 RMD160 f238823d3268ff01ea62192c9a3db022abbd6db5 SHA1 c21d1701c798be6687273d8b71bc13c12fc21da7 SHA256 798e24338ed3038f22235479fc452ff3860bd1fbefb7e6e76aaaad3e1b4b78ef
 MISC metadata.xml 357 RMD160 e3efebd904a8d6be8acc0c02719c9db6eaed1630 SHA1 3f798c3237997965d03024321dca8ab20e615dca SHA256 0bacfbf3e5483df1ee0bfa734863137911d519183d218f02a906f021f0eb3c13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk+QOBgACgkQV3J2n04EauxkzACcDaKwG+RaG8UDpbdGhMXQ+/IZ
-pNoAoLm1h5keSRjbNd/BOQ1IeX/6YWnW
-=WdxI
+iEYEAREIAAYFAk/c3JYACgkQV3J2n04EauyHJQCcCYVUZWscqwlpe2PwC+1a6ZWQ
+N6YAoIIIqcE256LiCT9mG3t9f/gjAaCe
+=n4dm
 -----END PGP SIGNATURE-----
