@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST EV-4.10.tar.gz 181424 RMD160 b7527ee583507e624a95ea227f67076537dbb93c SHA1 af7c0f31abcef06125b84f4476d0c9a7a9629ced SHA256 6e10ba655d8651231471224f7d218c78d4cd7d0578700f81444faf4ba580c4c9
+DIST EV-4.11.tar.gz 182356 RMD160 441c0cff27604ebb5e25bc71db82e285445b0e49 SHA1 8e27a327bcbf37713914531d87b775eea5cebe13 SHA256 0d3e45881e7c5aad523df3271a8fb47f5483df2f9c98fe527bea84b311116670
 EBUILD EV-4.100.0.ebuild 483 RMD160 8ea74b675b612cb26aa587ef566f16fd916af180 SHA1 0fb2e83e5092fee6e3abf1012253267fc7984368 SHA256 7fa828907eed956cd999bc69fa05088be768ad5d79a186ac3c2a24e59dd64914
-MISC ChangeLog 878 RMD160 d2395c91ad1eaef77a847bb7562469f28a90b921 SHA1 e0190cc591096a6784a874d3b7156f71c0cc7d7b SHA256 96fd5fd55564e817d276abede8432e3aef3a6cba8458837a4612bb52155cd22b
+EBUILD EV-4.110.0.ebuild 483 RMD160 afce3641836b24ecd1317e6024a360876a821256 SHA1 c11e5b7a7009579d9ef4686b3a8eb413d0bc098c SHA256 7cdb9021af6a1ca9289c6de588f013bcb90aaf1e57ea7e53460f19fca5605f3d
+MISC ChangeLog 989 RMD160 1689e72a69c6914021c80ad7d30d3066b183df66 SHA1 6935ceec5221667ea221ceda47a7a2c4806effff SHA256 620d8f83e42a94d252323b739be7c9c42127095421dfc708fc1b95ec5c70d732
 MISC metadata.xml 228 RMD160 530c7519ab974ec338edb55a1e49a352a654860d SHA1 58f2420250d9e5eebf7dfff1581923ad192fbc8b SHA256 b7d2b1666e39b179ce629e36eca7fb9b05545a24574bf73254027d00e832ef32
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk+TCsUACgkQV3J2n04EauykvwCfcZu4RCANvutpB9R5yHFhXVih
-ozEAoLIQOXwTjKJLckK9d3QPn9vWcRQv
-=iKrl
+iEYEAREIAAYFAk/c24kACgkQV3J2n04EauwWLQCdHxawOMH84d/ycbk5ypw6qeUr
+ncYAniVxL4rO7MCtLPe8k+fnfXBcgdkx
+=IV8o
 -----END PGP SIGNATURE-----
