@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST File-MMagic-1.27.tar.gz 21332 RMD160 8406a265ba35b8904e28e4f19ab401cd7d55740d SHA1 cf4fdd9b0b468b81ad59f744de3d11b98094ef30 SHA256 d82d4f07c7a321641f304460d4878303cb2241d2401a3544eed904199ae83d6a
+DIST File-MMagic-1.28.tar.gz 21859 RMD160 7372f8006f32274375b0247bbc21ddf7c3818903 SHA1 a6d7613724e5060d8ea60ec5d44f5aa080afd99b SHA256 946f551fd579252f739f6dbcd8a45894094d405983e3f0a8da66c2ec8f10b362
 EBUILD File-MMagic-1.270.0.ebuild 459 RMD160 beb26de76d48c35d8d6ea155cd6a19ff4a022c94 SHA1 e17068e7cd6728a6a1130b14bd72afa332a89e18 SHA256 92ebf35ffdc3e71d7eec9e9820acae2ee4691bd013d228eb4ba7ec9adf9b0219
-MISC ChangeLog 6379 RMD160 1a4ac5053efbfc279d4218b07c87d54c2bc5d65a SHA1 b8ade886ebba410f3efad1e4ac722585ebf66b00 SHA256 ea25597981564d3847972f4ace393e4de76f4250ca43d4b97eb7ea658b6c28d2
+EBUILD File-MMagic-1.280.0.ebuild 466 RMD160 720d01b21c932521bf92b5287e128ac3ee518a3e SHA1 833dc9150088ab25d845cf0ba2fb1e6dfef721f1 SHA256 eccd0962fd832a8c72eda5af6e54a8fac7a779f9c3777ce4570c9539d3a73430
+MISC ChangeLog 6508 RMD160 c4cf83661b341856c166f04f8f09ac5e552931a8 SHA1 07b8ba8bcb5c597c0b9114d2412020e226013508 SHA256 4a097ccd6548a73d52990969c4e54a418f1cc55680674757616438d1a891cbdc
 MISC metadata.xml 237 RMD160 4cdb23690682a97874338b8addf6e8c74241fadc SHA1 6aeff337c4cec40f4e7908ba5c0cd173e513c808 SHA256 7dda65b756ffe8f90b22454ec43ae743c6abbb16cfe43b756f447d5726963829
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk5jYEQACgkQV3J2n04EauxgXgCfTuipG+CaUAYtoDFr0mqsv4lP
-gEsAoISoTH4um3hhBGeyicNAemF1dSQ3
-=Dsv7
+iEYEAREIAAYFAk/c2/8ACgkQV3J2n04EauzzKACgiNqfAngY1MY0wByWsif7rzNq
+RGIAnjbqXP5RAQiO1gYeFL8DOoBSpjDS
+=bUW+
 -----END PGP SIGNATURE-----
