@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/EV
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/EV/ChangeLog,v 1.6 2012/04/21 19:30:08 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/EV/ChangeLog,v 1.7 2012/06/16 19:16:20 tove Exp $
+
+*EV-4.110.0 (16 Jun 2012)
+
+  16 Jun 2012; Torsten Veller <tove@gentoo.org> +EV-4.110.0.ebuild:
+  Version bump
 
   21 Apr 2012; Torsten Veller <tove@gentoo.org> -EV-4.30.0.ebuild:
   Cleanup
